# pypandas-sql

./: .coveragerc  .gitignore  README.md  pypandasql  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
pypandas_sql/dbconnector/: db_connector.py  mysql_connector.py  redshift_connector.py
pypandas_sql/queryengine/: db_query_engine.py  mysql_query_engine.py  redshift_query_engine.py
requirements/: default.txt  requirements.txt  test.txt
tests/: persistent_test_base.py  redshift_model.py  redshift_persistent_test_base.py  test_hello.py
tests/pypandas_sql/dbconnector/: db_connector_test.py  redshift_connector_test.py
tests/pypandas_sql/queryengine/: db_query_engine_test.py  redshift.ini  redshift_query_engine_test.py
tests/utils/: config_helper_test.py  credential_helper_test.py  filepath_helper_test.py
utils/: config_helper.py  credential_helper.py  filepath_helper.py
